World of Fantasy

--- a/WorldOfFantasy/WorldOfFantasy.html
+++ b/WorldOfFantasy/WorldOfFantasy.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="WorldOfFantasy.jpg"> <br>
+<img src="WorldOfFantasy.jpg" title="John Severin"> <br>
 Series: 19 issues 1956 -1959<br>
 Publisher: Atlas<br>
 <p>
@@ -20,7 +20,10 @@ Publisher: Atlas<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="WorldOfFantasy.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WorldOfFantasy.jpg" title="John Severin"></div>
+<div class="mySlides" style="text-align: center;"><img src="WorldOfFantasy02.jpg" title="Joe Maneely"></div>
+<div class="mySlides" style="text-align: center;"><img src="WorldOfFantasy04.jpg" title="Bill Everett"></div>
+<div class="mySlides" style="text-align: center;"><img src="WorldOfFantasy05.jpg" title="Bill Everett"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
