World of Fantasy

--- a/WorldOfFantasy/WorldOfFantasy.html
+++ b/WorldOfFantasy/WorldOfFantasy.html
@@ -22,6 +22,7 @@ Publisher: Atlas<br>
 
 <div class="mySlides" style="text-align: center;"><img src="WorldOfFantasy.jpg" title="John Severin"></div>
 <div class="mySlides" style="text-align: center;"><img src="WorldOfFantasy02.jpg" title="Joe Maneely"></div>
+<div class="mySlides" style="text-align: center;"><img src="WorldOfFantasy03.jpg" title="Sol Brodsky"></div>
 <div class="mySlides" style="text-align: center;"><img src="WorldOfFantasy04.jpg" title="Bill Everett"></div>
 <div class="mySlides" style="text-align: center;"><img src="WorldOfFantasy05.jpg" title="Bill Everett"></div>
 
