--- a/BasilWolverton/BasilWolverton.html
+++ b/BasilWolverton/BasilWolverton.html
@@ -23,6 +23,7 @@
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton05.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
