--- a/BasilWolverton/BasilWolverton.html
+++ b/BasilWolverton/BasilWolverton.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="BasilWolverton01.jpg"> <br>
+<img src="BasilWolverton.jpg"> <br>
 
 <p>
 <div class="row"><div class="column">
