--- a/Bible/Bible.html
+++ b/Bible/Bible.html
@@ -33,6 +33,8 @@ Many different authors contributed to the Bible. What is regarded as canonical t
 </p><p>
 The Hebrew Bible is known in Judaism as the Tanakh. The New Testament is a collection of writings by early Christians, believed to be mostly Jewish disciples of Christ, written in first-century Koine Greek. These early Christian Greek writings consist of Gospels, letters, and apocalyptic writings. Among Christian denominations there is some disagreement about the contents of the canon, primarily the Apocrypha, a list of works that are regarded with varying levels of respect.
 </p><p>
+The Silver Scrolls, found at Ketef Hinnom in Israel, contain texts from the Hebrew Bible that date to about 700-650 BCE.
+</p><p>
 The Bible has been a massive influence on literature and history, especially in the Western World, where the Gutenberg Bible was the first book printed using movable type. According to the March 2007 edition of Time, the Bible "has done more to shape literature, history, entertainment, and culture than any book ever written. Its influence on world history is unparalleled, and shows no signs of abating." As of the 2000s, it sells approximately 100 million copies annually.
 </p>
 </body>
