--- a/JeniferRenzel/JeniferRenzel.html
+++ b/JeniferRenzel/JeniferRenzel.html
@@ -31,7 +31,7 @@ Jenifer Renzel 2017<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+When painting, I use an approach that builds the painting from the background to the foreground up as I carefully watch for the subject to emerge. As I layer the oversaturated colors and criss cross them, I rotate the canvas,  squint, repeat, and wait for it to come to life. I use paint, pencils, pastels, and some collage elements. <a href="https://www.jjrenzel.com">- JJRenzel</a>
 </p>
 </body>
 </html>
