--- a/RobertAntonWilson/RobertAntonWilson.html
+++ b/RobertAntonWilson/RobertAntonWilson.html
@@ -40,56 +40,52 @@ Robert Anton Wilson (January 18, 1932 – January 11, 2007) was an American auth
 </p><p>
 Wilson described his work as an "attempt to break down conditioned associations, to look at the world in a new way, with many models recognized as models or maps, and no one model elevated to the truth". His goal being "to try to get people into a state of generalized agnosticism, not agnosticism about God alone but agnosticism about everything."
 </p><p>
-Books Fiction<ul>
-<li>The Sex Magicians (1973)
-<li>The Illuminatus! Trilogy (1975) (with Robert Shea)
-<li>The Eye in the Pyramid
-<li>The Golden Apple
-<li>Leviathan
-<li>Schrödinger's Cat Trilogy (1979–1981)
-<li>The Universe Next Door
-<li>The Trick Top Hat
-<li>The Homing Pigeons
-<li>Masks of the Illuminati (1981)
-<li>The Historical Illuminatus Chronicles
-<li>The Earth Will Shake (1982)
-<li>The Widow's Son (1985)
-<li>Nature's God (1988)
-<li>Autobiographical and philosophical trilogy
-<li>Cosmic Trigger Trilogy
-<li>Cosmic Trigger I: The Final Secret of the Illuminati (1977)
-<li>Cosmic Trigger II: Down to Earth (1991)
-<li>Cosmic Trigger III: My Life After Death (1995)
-<li>Plays and screenplays
-<li>Wilhelm Reich in Hell (1987)
-<li>Reality Is What You Can Get Away With (1992; revised edition—new introduction added—1996)
-<li>The Walls Came Tumbling Down (1997)
-<li>Non-fiction
+Books<ul>
 <li>Playboy's Book of Forbidden Words (1972)
 <li>Sex and Drugs: A Journey Beyond Limits (1973)
+<li>The Sex Magicians (1973)
 <li>The Book of the Breast (1974)
-<li>Revised as Ishtar Rising (1989)
-<li>Neuropolitics (1978) (with Timothy Leary and George Koopman)
-<li>Revised as Neuropolitique (1988)
-<li>The Game of Life (1979) (with Timothy Leary)
+<li>The Illuminatus! Trilogy (1975)
+<li>The Eye in the Pyramid (1975)
+<li>The Golden Apple (1975)
+<li>Leviathan (1975)
+<li>Cosmic Trigger Trilogy (1977)
+<li>Cosmic Trigger I: The Final Secret of the Illuminati (1977)
+<li>Neuropolitics (1978)
+<li>Schrödinger's Cat Trilogy (1979)
+<li>The Universe Next Door (1979)
+<li>The Trick Top Hat (1979)
+<li>The Homing Pigeons (1979)
+<li>The Game of Life (1979)
+<li>The Illuminati Papers (1980)
+<li>Masks of the Illuminati (1981)
+<li>The Historical Illuminatus Chronicles (1981)
+<li>The Earth Will Shake (1982)
+<li>Right Where You Are Sitting Now (1983)
 <li>Prometheus Rising (1983)
+<li>The Widow's Son (1985)
 <li>The New Inquisition (1986)
 <li>Natural Law, or Don't Put a Rubber on Your Willy (1987)
-<li>Sex, Drugs and Magick: A Journey Beyond Limits (1988) revision, with new introduction, of Sex and Drugs: A Journey Beyond Limits
+<li>Wilhelm Reich in Hell (1987)
+<li>Nature's God (1988)
+<li>Coincidance: A Head Test (1988)
+<li>Revised as Neuropolitique (1988)
+<li>Sex, Drugs and Magick: A Journey Beyond Limits (1988)
+<li>Ishtar Rising (1989)
 <li>Quantum Psychology (1990)
-<li>Everything Is Under Control: Conspiracies, Cults and Cover-ups (1998) (with Miriam Joan Hill)
+<li>Cosmic Trigger II: Down to Earth (1991)
+<li>Reality Is What You Can Get Away With (1992)
+<li>Cosmic Trigger III: My Life After Death (1995)
+<li>The Walls Came Tumbling Down (1997)
+<li>Everything Is Under Control: Conspiracies, Cults and Cover-ups (1998)
 <li>TSOG: The Thing That Ate the Constitution (2002)
-<li>Essay collections
-<li>The Illuminati Papers (1980) collection of essays and new material
-<li>Right Where You Are Sitting Now (1983) collection of essays and new material
-<li>Coincidance: A Head Test (1988) collection of essays and new material
-<li>Email to the universe and other alterations of consciousness (2005) collection of essays and new material
-<li>More Chaos and Beyond (2019) posthumous ebook of previously uncollected material
+<li>Email To The Universe (2005)
+<li>More Chaos and Beyond (2019)
 </ul>
 </p><p>
 Documentary
 <ul>
-<li>Maybe Logic: The Lives and Ideas of Robert Anton Wilson, a documentary featuring selections from over 25 years of Wilson footage, released on DVD in North America on May 30, 2006.
+<li>Maybe Logic: The Lives and Ideas of Robert Anton Wilson, a documentary featuring selections from over 25 years of Wilson footage. (2006)
 </ul>
 </p>
 </body>
