--- a/LennyBruce/LennyBruce.html
+++ b/LennyBruce/LennyBruce.html
@@ -22,7 +22,8 @@
 <div class="mySlides" style="text-align: center;"><img src="LennyBruce01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LennyBruce02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LennyBruce03.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="LennyBruce04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LennyBruce05.jpg"></div>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
