--- a/ArthurSuydam/ArthurSuydam.html
+++ b/ArthurSuydam/ArthurSuydam.html
@@ -25,6 +25,7 @@
 <div class="mySlides" style="text-align: center;"><img src="ArthurSuydam04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ArthurSuydam05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ArthurSuydam06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArthurSuydam07.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
