--- a/FrankQuitely/FrankQuitely.html
+++ b/FrankQuitely/FrankQuitely.html
@@ -19,13 +19,13 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="FrankQuietly01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="FrankQuietly02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="FrankQuietly03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="FrankQuietly04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="FrankQuietly05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="FrankQuietly06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="FrankQuietly07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FrankQuitely01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FrankQuitely02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FrankQuitely03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FrankQuitely04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FrankQuitely05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FrankQuitely06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FrankQuitely07.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
