--- a/RonCobb/RonCobb.html
+++ b/RonCobb/RonCobb.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-Ron Cobb<br>
-<img src="RonCobb01.jpg"> <br>
-
+<img src="RonCobb.jpg" title="Ron Cobb">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -27,6 +25,9 @@ Ron Cobb<br>
 <div class="mySlides" style="text-align: center;"><img src="RonCobb05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RonCobb06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RonCobb07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
