--- a/WendyPini/WendyPini.html
+++ b/WendyPini/WendyPini.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-Wendy Pini<br>
-<img src="WendyPini.jpg">
+<img src="WendyPini.jpg" title="Wendy Pini">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
