--- a/WallyWood/WallyWood.html
+++ b/WallyWood/WallyWood.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="WallyWood.jpg"> <br>
+<img src="WallyWood.jpg" title="Wally Wood"> <br>
 
 <p>
 <div class="row"><div class="column">
