--- a/Zap/zap.html
+++ b/Zap/zap.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<meta charset="utf-8"><link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Zap</title>
 </head>
 
 <body>
-<h2>Zap</h2>
-<img src="zap00.jpg"> <br>
+<img src="zap00.jpg" title="Zap #0">
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="zap00.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap16.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Series: 17 issues<br>
 Creators: Robert Crumb, Victor Moscoso, S. Clay Wilson, Gilbert Shelton, Spain Rodriguez, Robert Williams, Rick Griffin, Paul Mavrides<br>
 Publisher: 1968 Apex Novelty<br>
-<p>
-About: Zap Comix is an underground comix series which was originally part of the youth counterculture of the late 1960s. While a few small-circulation self-published satirical comic books had been printed prior to this, Zap became the model for the "comix" movement that snowballed after its release.
+</p><p>
+Zap Comix is an underground comix series which was originally part of the youth counterculture of the late 1960s. While a few small-circulation self-published satirical comic books had been printed prior to this, Zap became the model for the "comix" movement that snowballed after its release.
 </p><p>
 Premiering in early 1968 as a showcase for the work of Robert Crumb, Zap was unlike any comic book sensibility that had been seen before. After the success of the first issue, Crumb opened the pages of Zap to several other artists, including S. Clay Wilson, Robert Williams, "Spain" Rodriguez, Gilbert Shelton, and two artists with reputations as psychedelic poster designers, Victor Moscoso and Rick Griffin. This stable of artists, along with Crumb, remained mostly constant throughout the history of Zap.
 </p><p>
-Story: Labeled "Fair Warning: For Adult Intellectuals Only", Zap #1 featured the publishing debut of Robert Crumb's much-bootlegged Keep on Truckin' imagery, an early appearance of unreliable holy man Mr. Natural and his neurotic disciple Flakey Foont, and the first of innumerable self-caricatures (in which Crumb calls himself "a raving lunatic", and "one of the world's last great medieval thinkers"). Perhaps most notable in the debut issue was the story "Whiteman," which detailed the inner torment seething within the lusty, fearful heart of an outwardly upright American.
+Labeled "Fair Warning: For Adult Intellectuals Only", Zap #1 featured the publishing debut of Robert Crumb's much-bootlegged Keep on Truckin' imagery, an early appearance of unreliable holy man Mr. Natural and his neurotic disciple Flakey Foont, and the first of innumerable self-caricatures (in which Crumb calls himself "a raving lunatic", and "one of the world's last great medieval thinkers"). Perhaps most notable in the debut issue was the story "Whiteman," which detailed the inner torment seething within the lusty, fearful heart of an outwardly upright American.
 </p>
 
 </body>
