--- a/Zap/zap.html
+++ b/Zap/zap.html
@@ -21,6 +21,7 @@
 <div class="mySlides" style="text-align: center;"><img src="zap01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="zap02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="zap03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap03b.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="zap04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="zap05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="zap06.jpg"></div>
@@ -33,6 +34,7 @@
 <div class="mySlides" style="text-align: center;"><img src="zap13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="zap14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="zap15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="zap15b.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="zap16.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
