--- a/VicAndBlood/VicAndBlood.html
+++ b/VicAndBlood/VicAndBlood.html
@@ -2,14 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>A Boy and His Dog</title>
 </head>
 
 <body>
-Vic and Blood The Chronicles of a Boy and his Dog<br>
-<img src="ABoyAndDog.jpg"> <img src="VicAndBlood.jpg"> <br>
-Series: Movie 1975, Comics 2 issues 1987, 1 Graphic Novel 1989 <br>
+<img src="ABoyAndDog.jpg" title="A Boy and His Dog"> 
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="VicAndBlood.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VicAndBlood1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VicAndBlood2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Vic and Blood: The Chronicles of a Boy and His Dog. <br>
+Movie 1975, 2 issue comic 1987, 1 Graphic Novel 1989 <br>
 Publisher: LQ/JAF Productions, Mad Dog Graphics, NBM<br>
 Story by Harlan Ellison<br>
 Illustrations by Richard Corben<br>
@@ -32,11 +50,7 @@ Quilla June helps Vic escape because she wants him to kill the Committee members
 </p><p>
 On the surface, Vic and Quilla June discover Blood is starving and near death. She pleads with him to abandon Blood, forcing Vic to face his feelings. Vic decides that his loyalties lie with Blood. This results, off-camera, in her being killed and her flesh cooked, so that they can eat and survive. Blood thanks Vic for the food, and they both comment on Quilla June, with Vic stating it was her fault to follow him, and Blood joking that she didn't have bad 'taste'. The film ends with the boy and his dog walking off into the wasteland together.
 </p><p>
-<img src="VicAndBlood1.jpg">
-</p><p>
 Legendary Heavy Metal artist Corben adapts Ellisons award-winning, controversial short story A Boy and His Dog, which also inspired the 1970s cult-classic film starring Don Johnson. In a ruined future, Vic hunts for survival and women with the aid of his telepathic dog, Blood. When Vic is lured into a subterranean paradise that needs virile men, its bad news for the buddy team. Also featuring another Vic and Blood story, Eggsucker.
-</p><p> 
-<img src="VicAndBlood2.jpg">
 </p><p>
 Vic learns the horrifying truth about the underground culture of survivors, and escape means making a terrible choice. Also featuring another story that continues Vic and Blood storyline beyond the short story and film. 
 </p>
