--- a/BernardBaily/BernardBaily.html
+++ b/BernardBaily/BernardBaily.html
@@ -18,7 +18,7 @@
 <div id="myModal" class="modal">
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
-
+<div class="mySlides" style="text-align: center;"><img src="BernardBaily00.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BernardBaily01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BernardBaily02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BernardBaily03.jpg"></div>
@@ -33,9 +33,25 @@ Bernard Baily (1916 – 1996) was an American comic book artist best known as co
 </p><p>
 In 1943, Baily founded the publishing company Baily Publications and, with artist Mac Raboy, the comics packager Bernard Baily Studio. The latter concern, which lasted through 1946, was the outsource producer of such comics as Cambridge House Publishers' single-issue Star Studded Comics and Gold Medal Comics (both 1945). 
 </p><p>
-Other publishers for whom his studio created comics included the Rural Home Publishing imprint Croyden; Jay Burtis; Narrative; Lindsay Baird; Feature Comics; Neal Publications; the Spotlight Comics imprint Novack '45; R.B. Leffingwell; and Holyoke Publications. Among the fledgling artists gaining a foothold in the industry at Baily's studio were Gil Kane, Carmine Infantino, and Frank Frazetta, who at 16 assisted the established artist John Giunta there. Other personnel included Dan Barry, Dick Briefer, Manny Stallman, and Nina Albright, one of a handful of Golden Age women comic-book artists.
+Other publishers for whom his studio created comics included:
+<li>the Rural Home Publishing imprint Croyden
+<li>Jay Burtis
+<li>Narrative
+<li>Lindsay Baird
+<li>Feature Comics
+<li>Neal Publications
+<li>the Spotlight Comics imprint Novack '45
+<li>R.B. Leffingwell
+<li>Holyoke Publications
 </p><p>
-Baily himself drew for a number of companies in the 1950s, including DC Comics (House of Mystery, House of Secrets, Tales of the Unexpected, and the TV-series adaptations Mr. District Attorney and Gang Busters); Fawcett Comics (This Magazine is Haunted, Beware! Terror Tales); Key Publications (Mister Mystery, Weird Mystieres, Weird Chills, Weird Tales of the Future); St. John Publications (Strange Terrors); and Marvel Comics precursor Atlas Comics (Astonishing, Journey into Mystery, Strange Tales, Tales of Justice, Uncanny Tales, World of Fantasy, and others).
+Among the fledgling artists gaining a foothold in the industry at Baily's studio were Gil Kane, Carmine Infantino, and Frank Frazetta, who at 16 assisted the established artist John Giunta there. Other personnel included Dan Barry, Dick Briefer, Manny Stallman, and Nina Albright, one of a handful of Golden Age women comic-book artists.
+</p><p>
+Baily himself drew for a number of companies in the 1950s, including: 
+<li>DC Comics (House of Mystery, House of Secrets, Tales of the Unexpected, and the TV-series adaptations Mr. District Attorney and Gang Busters)
+<li>Fawcett Comics (This Magazine is Haunted, Beware! Terror Tales)
+<li>Key Publications (Mister Mystery, Weird Mystieres, Weird Chills, Weird Tales of the Future)
+<li>St. John Publications (Strange Terrors)
+<li>Atlas Comics (Astonishing, Journey into Mystery, Strange Tales, Tales of Justice, Uncanny Tales, World of Fantasy, and others).
 </p><p>
 He also wrote and drew the syndicated comic strip Gilda Gay through the 1950s, and contributed to Major Publications' satirical magazine Cracked.
 </p>
