--- a/JamieHewlett/JamieHewlett.html
+++ b/JamieHewlett/JamieHewlett.html
@@ -28,6 +28,7 @@
 <div class="mySlides" style="text-align: center;"><img src="JamieHewlett07.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JamieHewlett08.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JamieHewlett09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JamieHewlett10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
