--- a/TalesToAstonish/TalesToAstonish.html
+++ b/TalesToAstonish/TalesToAstonish.html
@@ -8,11 +8,32 @@
 </head>
 
 <body>
-<img src="TalesToAstonish1.jpg"> <br>
-Series: 101 issues 1959 - 1968<br>
+<img src="TalesToAstonish01.jpg" title="#1 Jack Kirby"><br>
+Series: 101 issues 1959 - 1968. Numbering continues with The Incredible Hulk (1968 series) #102<br>
 Publisher: Marvel<br>
-<p>
-Numbering continues with The Incredible Hulk (Marvel, 1968 series) #102
+</p><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish01.jpg" title="# Cover by 1 Jack Kirby. An expedition in remote waters finds a missing scientist who has used serums to create giant turtles, one the size of a house, the other the size of an island."></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish02.jpg" title="#2 Cover by Steve Ditko. A ruthless outer space game hunter captures specimens for zoos, but when he is forced to crash land on an alien world the inhabitants see him as an animal and put him in a zoo. He escapes, but resolves never to cage another animal."></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish03.jpg" title="#3 Cover by Jack Kirby. A space traveler many times larger than everyone else lands and carefully explores the area, accidentally causing some damage and fear. He leaves because of this, and goes home to Earth, thinking that they will need to be careful to deal with these tiny people."></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish04.jpg" title="#4 Cover by Jack Kirby. A bullying director is kidnapped by Martians using the science fiction movie he's filming as a cover. They're forced to land because of a malfunction, and explain that they'll have to let him go...if one of the actors or crew that he abused tries to rescue him."></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish05.jpg" title="#5 Cover by Jack Kirby. A pilot crash lands on Easter Island where he observes the statues rise out of the ground and discuss invasion plans of their home planet and the enslavement of Earthmen. He flees the pursuit of the statues and attempts to warn the proper authorities, but no one believes him. Eventually he begins to doubt his story as well, and unobserved, the statues who had been following him return to Easter island safe in the knowledge that no one would believe such an outlandish tale."></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish06.jpg" title="#6 Cover by Jack Kirby. Stone men rise out of the ground and set off a panic. A geologist realizes that the creatures are just explorers and will return underground on their own."></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish07.jpg" title="#7 Cover by Jack Kirby. A sculptor builds two statues, one representing good and the other, evil, but the evil statue comes to life and attacks him. The good statue saves him, and both of them fall into the swamp."></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish08.jpg" title="#8 Cover by Jack Kirby. An archaeologist finds a giant mummy in the Egyptian desert. It rises and searches the tombs and museums of the area, examining several mummies before returning into the desert. The scientist follows it and sees the mummy enter a spaceship and lift-off. It was actually an explorer looking for missing space pilots, who wear mummy-like bandages as protective suits."></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish09.jpg" title="#9 Covery by Jack Kirby. A scientist invents a growth serum intended to solve world hunger by enlarging vegetables. A tiny exotic lizard is accidentally soaked by the liquid and grows into a giant lizard that rampages across the country. They blast it into outer space and it drifts through space frozen, eventually landing on Earth to become the first dinosaur."></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish10.jpg" title="#10 Cover by Jack Kirby - A gigantic, mutant crab is sighted terrorizing various islands in the South Pacific. When the American military learn of this, they assign Commander Hartnell to put a stop to the crustacean threat that has become known as Titano. Hartnell's crew has several encounters with Titano and they eventually lure him to the Arctic. Hartnell maneuvers his ship so deftly that he manages to trap Titano between two giant glaciers. "></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
 Tales to Astonish is the name of two American comic book series and a one-shot comic published by Marvel Comics.
 </p><p>
