--- a/TalesToAstonish/TalesToAstonish.html
+++ b/TalesToAstonish/TalesToAstonish.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-<img src="TalesToAstonish01.jpg" title="#1 Jack Kirby"><br>
-Series: 101 issues 1959 - 1968. Numbering continues with The Incredible Hulk (1968 series) #102<br>
-Publisher: Marvel<br>
-</p><p>
+<img src="TalesToAstonish01.jpg" title="#1 Jack Kirby">
+<p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -29,15 +27,25 @@ Publisher: Marvel<br>
 <div class="mySlides" style="text-align: center;"><img src="TalesToAstonish07.jpg" title="#7 Cover by Jack Kirby. A sculptor builds two statues, one representing good and the other, evil, but the evil statue comes to life and attacks him. The good statue saves him, and both of them fall into the swamp."></div>
 <div class="mySlides" style="text-align: center;"><img src="TalesToAstonish08.jpg" title="#8 Cover by Jack Kirby. An archaeologist finds a giant mummy in the Egyptian desert. It rises and searches the tombs and museums of the area, examining several mummies before returning into the desert. The scientist follows it and sees the mummy enter a spaceship and lift-off. It was actually an explorer looking for missing space pilots, who wear mummy-like bandages as protective suits."></div>
 <div class="mySlides" style="text-align: center;"><img src="TalesToAstonish09.jpg" title="#9 Covery by Jack Kirby. A scientist invents a growth serum intended to solve world hunger by enlarging vegetables. A tiny exotic lizard is accidentally soaked by the liquid and grows into a giant lizard that rampages across the country. They blast it into outer space and it drifts through space frozen, eventually landing on Earth to become the first dinosaur."></div>
-<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish10.jpg" title="#10 Cover by Jack Kirby - A gigantic, mutant crab is sighted terrorizing various islands in the South Pacific. When the American military learn of this, they assign Commander Hartnell to put a stop to the crustacean threat that has become known as Titano. Hartnell's crew has several encounters with Titano and they eventually lure him to the Arctic. Hartnell maneuvers his ship so deftly that he manages to trap Titano between two giant glaciers. "></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish10.jpg" title="#10 Cover by Jack Kirby. A gigantic, mutant crab is sighted terrorizing various islands in the South Pacific. When the American military learn of this, they assign Commander Hartnell to put a stop to the crustacean threat that has become known as Titano. Hartnell's crew has several encounters with Titano and they eventually lure him to the Arctic. Hartnell maneuvers his ship so deftly that he manages to trap Titano between two giant glaciers. "></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish11.jpg" title="#11 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish12.jpg" title="#12 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish13.jpg" title="#13 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish14.jpg" title="#14 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish15.jpg" title="#15 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish16.jpg" title="#16 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish17.jpg" title="#17 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish18.jpg" title="#18 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish19.jpg" title="#19 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish20.jpg" title="#20 Cover by Jack Kirby"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Tales to Astonish is the name of two American comic book series and a one-shot comic published by Marvel Comics.
+Tales to Astonish ran for 101 issues between 1959 and 1968. The series numbering continues with The Incredible Hulk (1968 series) #102.
 </p><p>
-The primary title bearing that name was published from January 1959 to March 1968. It began as a science-fiction anthology that served as a showcase for such artists as Jack Kirby and Steve Ditko, then featured superheroes during the period fans and historians call the Silver Age of Comic Books. It became The Incredible Hulk with issue #102 (April 1968). Its sister title was Tales of Suspense.
+The primary title bearing that name was published from January 1959 to March 1968. It began as a science-fiction anthology that served as a showcase for such artists as Jack Kirby and Steve Ditko, then featured superheroes during the period fans and historians call the Silver Age of Comic Books. Its sister title was Tales of Suspense.
 </p><p>
 A second Marvel comic bearing the name, reprinting stories of the undersea ruler the Sub-Mariner, ran 14 issues from December 1979 to January 1981. A superhero one-shot followed in 1994.
 </p><p>
@@ -45,7 +53,7 @@ Tales to Astonish and its sister publication Tales of Suspense were both launche
 </p><p>
 It contained science-fiction mystery/suspense stories written primarily by editor-in-chief Stan Lee and his brother, Larry Lieber, with artists including Jack Kirby, Steve Ditko, Dick Ayers, Don Heck and Paul Reinman. 
 </p><p>
-One such story, "The Man In The Ant Hill", in #27 (Jan. 1962), introduced the character Henry Pym, who would be repurposed eight issues later as the superhero Ant-Man. Anthological stories continued to appear as backups until Tales to Astonish became a superhero "split book" in 1964, when it began featuring one story each of Giant-Man and the Hulk.
+One such story, "The Man In The Ant Hill", in #27 (Jan. 1962), introduced the character Henry Pym, who would be re-purposed eight issues later as the superhero Ant-Man. Anthological stories continued to appear as backups until Tales to Astonish became a superhero "split book" in 1964, when it began featuring one story each of Giant-Man and the Hulk.
 </p>
 </body>
 </html>
