--- a/TalesToAstonish/TalesToAstonish.html
+++ b/TalesToAstonish/TalesToAstonish.html
@@ -38,6 +38,16 @@
 <div class="mySlides" style="text-align: center;"><img src="TalesToAstonish18.jpg" title="#18 Cover by Jack Kirby"></div>
 <div class="mySlides" style="text-align: center;"><img src="TalesToAstonish19.jpg" title="#19 Cover by Jack Kirby"></div>
 <div class="mySlides" style="text-align: center;"><img src="TalesToAstonish20.jpg" title="#20 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish21.jpg" title="#21 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish22.jpg" title="#22 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish23.jpg" title="#23 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish24.jpg" title="#24 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish25.jpg" title="#25 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish26.jpg" title="#26 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish27.jpg" title="#27 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish28.jpg" title="#28 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish29.jpg" title="#29 Cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesToAstonish30.jpg" title="#30 Cover by Jack Kirby"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
