--- a/Beano/Beano.html
+++ b/Beano/Beano.html
@@ -24,6 +24,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Beano03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Beano04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Beano05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Beano07.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
