--- a/Beano/Beano.html
+++ b/Beano/Beano.html
@@ -34,6 +34,10 @@
 The Beano is the longest running British (possibly the world) children's comic magazine, published by DC Thomson. The comic first appeared on 30 July 1938, and was published weekly. In September 2009, The Beano's 3,500th issue was published. One of the best selling comics in British popular culture, along with The Dandy, the weekly circulation of The Beano in April 1950 was 1,974,072. The Beano is currently edited by John Anderson. Each issue is published on a Wednesday, with the issue date being that of the following Saturday. The Beano will reach 4,000 issues in the summer of 2019.
 </p><p>
 Its characters include Dennis the Menace, Minnie the Minx, The Bash Street Kids, The Numskulls, Roger the Dodger, Billy Whizz and Tricky Dicky. Earlier characters who have been phased out include Ball Boy, Ivy the Terrible, The Three Bears and Pansy Potter. Some old characters, like Biffo the Bear, Lord Snooty, Baby Face Finlayson and Little Plum, have more recently made a return as "funsize" quarter-page strips.
+</p><p>
+R. D. Low, the head of children's publications at D. C. Thomson placed an advertisement in The Daily Telegraph to find new artists to create weekly comic strips for his second book, and Reg Carter (who had originally published Mickey Mouse comics throughout the 1930s) responded with a few ideas and sketches. Carter and Low's eventual idea would be an ostrich that misplaced his eggs, which would later become Big Eggo, the first cover star of the eventually-named The Beano on 26 July 1938. 
+</p><p>
+The Beano takes its name from the English word beano, a short form of bean-feast, a term for a festive meal, or loosely "a good time".
 </p>
 </body>
 </html>
