--- a/Beano/Beano.html
+++ b/Beano/Beano.html
@@ -19,12 +19,33 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Beano01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Beano02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Beano03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Beano04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Beano05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Beano07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Beano01.jpg" title="1938"></div>
+<div class="mySlides" style="text-align: center;"><img src="Beano02.jpg" title="1938"></div>
+<div class="mySlides" style="text-align: center;"><img src="Beano03.jpg" title="1938"></div>
+<div class="mySlides" style="text-align: center;"><img src="Beano04.jpg" title="1938"></div>
+<div class="mySlides" style="text-align: center;"><img src="Beano05.jpg" title="1938"></div>
+<div class="mySlides" style="text-align: center;"><img src="Beano07.jpg" title="1938"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook01.jpg" title="1940"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook02.jpg" title="1941"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook03.jpg" title="1942"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook04.jpg" title="1943"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook05.jpg" title="1944"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook06.jpg" title="1945"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook07.jpg" title="1946"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook08.jpg" title="1947"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook09.jpg" title="1948"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook10.jpg" title="1949"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook11.jpg" title="1950"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook12.jpg" title="1951"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook13.jpg" title="1952"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook14.jpg" title="1953"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook15.jpg" title="1954"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook16.jpg" title="1955"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook17.jpg" title="1956"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook18.jpg" title="1957"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook19.jpg" title="1958"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook20.jpg" title="1959"></div>
+<div class="mySlides" style="text-align: center;"><img src="BeanoBook21.jpg" title="1960"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -38,6 +59,14 @@ Its characters include Dennis the Menace, Minnie the Minx, The Bash Street Kids,
 R. D. Low, the head of children's publications at D. C. Thomson placed an advertisement in The Daily Telegraph to find new artists to create weekly comic strips for his second book, and Reg Carter (who had originally published Mickey Mouse comics throughout the 1930s) responded with a few ideas and sketches. Carter and Low's eventual idea would be an ostrich that misplaced his eggs, which would later become Big Eggo, the first cover star of the eventually-named The Beano on 26 July 1938. 
 </p><p>
 The Beano takes its name from the English word beano, a short form of bean-feast, a term for a festive meal, or loosely "a good time".
+</p><p>
+The Beano Annual is the current name of the book that has been published every year since 1939, to tie in with the children's comic The Beano. As of 2018 there have been 79 editions. The annuals are traditionally published in July or August, in time for Christmas, and since 1965 they have had the date of the following year on the cover. Before then no date was given.
+</p><p>
+From the annual 1943 to 1950 one the annual was called "The Magic-Beano Book", which referred to the short-lived Magic Comic that had ceased publication in 1941 due to the Second World War's paper rationing. The name reverted to the original title of "The Beano Book" in 1950 and continued, the year changing for each subsequent annual, until the release of the 2003 book in 2002 when it was renamed "The Beano Annual". The 2011 Beano Annual is taller and wider than previous annuals.
+</p><p>
+After paper rationing had ended, The Magic Comic was never revived, but some of the characters who had originally appeared in the pre-war Magic Comic remained as regular strips in the post-1950 Beano Comic (such as Koko the Pup).
+</p><p>
+Because of his popularity, Dennis the Menace has appeared on the front cover of every annual since the release of the 1979 book in 1978.
 </p>
 </body>
 </html>
